--- a/Shared/zh-Hant.lproj/Localizable.strings
+++ b/Shared/zh-Hant.lproj/Localizable.strings
@@ -5,7 +5,24 @@
   Created by 陳家庠 on 2022/2/5.
   
 */
+
 "OK" = "好";
+"Yes" = "是";
+"No" = "否";
+"confirm" = "確定";
+
+//format
+"All" = "全部";
+"Historical Site, Buildings" = "古蹟、歷史建築、聚落";
+"Ruins" = "遺址";
+"Cultural Landscape" = "文化景觀";
+"Natural Landscape" = "自然景觀";
+"Traditional Art" = "傳統藝術";
+"Cultural Artifacts" = "民俗及有關文物";
+"Antique" = "古物";
+"Necessities of Life" = "食衣住行育樂";
+"Others" = "其他";
+
 //Account
 "more..." = "更多...";
 "account" = "帳號";
@@ -18,3 +35,42 @@
 "login success" = "登入成功";
 "choose COI" = "請選擇組織";
 "COI List" = "組織列表";
+
+
+//Group
+"Create" = "創建";
+"Edit" = "編輯";
+"Save" = "更新";
+"Create Group" = "創建群組";
+"Group List" = "群組清單";
+"Would you want to join" = "你想要加入";
+"Message List" = "訊息清單";
+"invite you to join" = "邀請你加入";
+"Information" = "資訊";
+"Member" = "組員";
+"Group Info" = "群組資訊";
+"Group Name:" = "群組名稱：";
+"Group Member" = "群組成員";
+"User name" = "使用者名稱";
+"invite:" = "邀請";
+"Group Join" = "加入群組";
+
+//POI
+"title" = "名稱";
+"longitude" = "經度";
+"latitude" = "緯度";
+"keyword" = "關鍵字";
+"description" = "景點描述";
+"format" = "範疇";
+"group" = "群組";
+"picture preview" = "圖片預覽";
+"complete to get your location" = "完成定位";
+"input your title" = "請輸入名稱";
+"click button to get your location" = "點擊定位取的所在位置";
+"input the poi keyword" = "請輸入景點關鍵字";
+"image source" = "圖片來源";
+"choose your image source" = "選擇圖片來源";
+"camera" = "相機";
+"Image Library" = "相片庫";
+"at most 5 picture" = "至多5張圖片";
+"Me" = "屬於自己";
