add delete media function

--- a/Shared/zh-Hant.lproj/Localizable.strings
+++ b/Shared/zh-Hant.lproj/Localizable.strings
@@ -77,3 +77,8 @@
 "Me" = "屬於自己";
 "play video" = "播放影片";
 "start record video" = "錄製影片";
+"start record audio" = "錄製聲音";
+"What would you want to do" = "你想要做什麼";
+
+"edit" = "編輯";
+"upload" = "上傳";
